[package]
name = "kenshi_server"
version = "0.1.0"
edition = "2021"

[dependencies]
kenshi_protocol = { path = "../kenshi_protocol" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
anyhow = "1.0"
